# Oracle2

./: .gitignore  main.py  pyproject.toml
api/jobs/: router.py
api/user/: user_router.py
data/: database.py
data/models/: user.py
services/: auth.py  environment_manager.py
tests/: conftest.py  fixtures.py  test_users.py
