[tool.poetry]
name = "oracle2"
version = "0.1.0"
description = ""
authors = ["lucas <ioroscampo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.115.10"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
