[tool.poetry]
name = "oracle2"
version = "0.1.0"
description = ""
authors = ["lucas <ioroscampo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"
fastapi = "^0.115.10"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.38"
pycryptodome = "^3.21.0"
python-jose = {extras = ["cryptodome"], version = "^3.4.0"}
passlib = "^1.7.4"
argon2-cffi = "^23.1.0"
pytest = "^8.3.5"
httpx = "^0.28.1"
sqlmodel = "^0.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
